<resources>
    <string name="modules">Modules</string>
    <string name="superuser">Superuser</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="install">Install</string>
    <string name="section_home">Home</string>
    <string name="section_theme">Themes</string>
    <string name="denylist">DenyList</string>
    <string name="no_connection">No connection available</string>
    <string name="app_changelog">Changelog</string>
    <string name="loading">Loading…</string>
    <string name="update">Update</string>
    <string name="not_available">N/A</string>
    <string name="hide">Hide</string>
    <string name="home_package">Package</string>
    <string name="home_app_title">App</string>
    <string name="home_notice_content">Download Magisk ONLY from the official GitHub page. Files from unknown sources can be malicious!</string>
    <string name="home_support_title">Support Us</string>
    <string name="home_follow_title">Follow Us</string>
    <string name="home_item_source">Source</string>
    <string name="home_support_content">Magisk is, and always will be, free, and open source. You can however show us that you care by making a donation.</string>
    <string name="home_installed_version">Installed</string>
    <string name="home_latest_version">Latest</string>
    <string name="invalid_update_channel">Invalid Update Channel</string>
    <string name="uninstall_magisk_title">Uninstall Magisk</string>
    <string name="uninstall_magisk_msg">All modules will be disabled/removed!\nRoot will be removed!\nAny internal storage unencrypted through the use of Magisk will be re-encrypted!</string>
    <string name="keep_force_encryption">Preserve force encryption</string>
    <string name="keep_dm_verity">Preserve AVB 2.0/dm-verity</string>
    <string name="patch_vbmeta">Patch vbmeta in boot image</string>
    <string name="recovery_mode">Recovery Mode</string>
    <string name="install_options_title">Options</string>
    <string name="install_method_title">Method</string>
    <string name="install_next">Next</string>
    <string name="install_start">Let\'s go</string>
    <string name="manager_download_install">Press to download and install</string>
    <string name="direct_install">Direct Install (Recommended)</string>
    <string name="install_inactive_slot">Install to Inactive Slot (After OTA)</string>
    <string name="install_inactive_slot_msg">Your device will be FORCED to boot to the current inactive slot after a reboot!\nOnly use this option after OTA is done.\nContinue?</string>
    <string name="setup_title">Additional Setup</string>
    <string name="select_patch_file">Select and Patch a File</string>
    <string name="patch_file_msg">Select a raw image (*.img) or an ODIN tarfile (*.tar)</string>
    <string name="reboot_delay_toast">Rebooting in 5 seconds…</string>
    <string name="flash_screen_title">Installation</string>
    <string name="su_request_title">Superuser Request</string>
    <string name="touch_filtered_warning">Because an app is obscuring a Superuser request, Magisk can\'t verify your response</string>
    <string name="deny">Deny</string>
    <string name="prompt">Prompt</string>
    <string name="grant">Grant</string>
    <string name="su_warning">Grants full access to your device.\nDeny if you\'re not sure!</string>
    <string name="forever">Forever</string>
    <string name="once">Once</string>
    <string name="tenmin">10 mins</string>
    <string name="twentymin">20 mins</string>
    <string name="thirtymin">30 mins</string>
    <string name="sixtymin">60 mins</string>
    <string name="su_allow_toast">%1$s was granted Superuser rights</string>
    <string name="su_deny_toast">%1$s was denied Superuser rights</string>
    <string name="su_snack_grant">Superuser rights of %1$s are granted</string>
    <string name="su_snack_deny">Superuser rights of %1$s are denied</string>
    <string name="su_snack_notif_on">Notifications of %1$s are enabled</string>
    <string name="su_snack_notif_off">Notifications of %1$s are disabled</string>
    <string name="su_snack_log_on">Logging of %1$s is enabled</string>
    <string name="su_snack_log_off">Logging of %1$s is disabled</string>
    <string name="su_revoke_title">Revoke?</string>
    <string name="su_revoke_msg">Confirm to revoke %1$s Superuser rights</string>
    <string name="toast">Toast</string>
    <string name="none">None</string>
    <string name="superuser_toggle_notification">Notifications</string>
    <string name="superuser_toggle_revoke">Revoke</string>
    <string name="superuser_policy_none">No apps have asked for Superuser permission yet.</string>
    <string name="log_data_none">You\'re log-free, try using your root apps more</string>
    <string name="log_data_magisk_none">Magisk logs are empty, that\'s weird</string>
    <string name="menuSaveLog">Save log</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared</string>
    <string name="pid">PID: %1$d</string>
    <string name="target_uid">Target UID: %1$d</string>
    <string name="show_system_app">Show system apps</string>
    <string name="show_os_app">Show OS apps</string>
    <string name="hide_filter_hint">Filter by name</string>
    <string name="hide_search">Search</string>
    <string name="no_info_provided">(No info provided)</string>
    <string name="reboot_userspace">Soft reboot</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="reboot_edl">Reboot to EDL</string>
    <string name="module_version_author">%1$s by %2$s</string>
    <string name="module_state_remove">Remove</string>
    <string name="module_state_restore">Restore</string>
    <string name="module_action_install_external">Install from storage</string>
    <string name="update_available">Update Available</string>
    <string name="suspend_text_riru">Module suspended because %1$s is enabled</string>
    <string name="suspend_text_zygisk">Module suspended because %1$s is not enabled</string>
    <string name="zygisk_module_unloaded">Zygisk module not loaded due to incompatibility</string>
    <string name="module_empty">No module installed</string>
    <string name="settings_dark_mode_title">Theme Mode</string>
    <string name="settings_dark_mode_message">Select mode which best suits your style!</string>
    <string name="settings_dark_mode_light">Always Light</string>
    <string name="settings_dark_mode_system">Follow System</string>
    <string name="settings_dark_mode_dark">Always Dark</string>
    <string name="settings_download_path_title">Download path</string>
    <string name="settings_download_path_message">Files will be saved to %1$s</string>
    <string name="settings_hide_app_title">Hide the Magisk app</string>
    <string name="settings_hide_app_summary">Install a proxy app with a random package ID and custom app label</string>
    <string name="settings_restore_app_title">Restore the Magisk app</string>
    <string name="settings_restore_app_summary">Unhide the app and restore the original APK</string>
    <string name="language">Language</string>
    <string name="system_default">(System Default)</string>
    <string name="settings_check_update_title">Check Updates</string>
    <string name="settings_check_update_summary">Periodically check for updates in the background</string>
    <string name="settings_update_channel_title">Update Channel</string>
    <string name="settings_update_stable">Stable</string>
    <string name="settings_update_beta">Beta</string>
    <string name="settings_update_custom">Custom</string>
    <string name="settings_update_custom_msg">Insert a custom channel URL</string>
    <string name="settings_zygisk_summary">Run parts of Magisk in the zygote daemon</string>
    <string name="settings_denylist_title">Enforce DenyList</string>
    <string name="settings_denylist_summary">Processes on the denylist will have all Magisk modifications reverted</string>
    <string name="settings_denylist_error">This feature requires %1$s to be enabled</string>
    <string name="settings_denylist_config_title">Configure DenyList</string>
    <string name="settings_denylist_config_summary">Select the processes to be included on the denylist</string>
    <string name="settings_hosts_title">Systemless hosts</string>
    <string name="settings_hosts_summary">Systemless hosts support for ad blocking apps</string>
    <string name="settings_hosts_toast">Added systemless hosts module</string>
    <string name="settings_app_name_hint">New name</string>
    <string name="settings_app_name_helper">App will be repackaged with this name</string>
    <string name="settings_app_name_error">Invalid format</string>
    <string name="settings_su_app_adb">Apps and ADB</string>
    <string name="settings_su_app">Apps only</string>
    <string name="settings_su_adb">ADB only</string>
    <string name="settings_su_disable">Disabled</string>
    <string name="settings_su_request_10">10 seconds</string>
    <string name="settings_su_request_15">15 seconds</string>
    <string name="settings_su_request_20">20 seconds</string>
    <string name="settings_su_request_30">30 seconds</string>
    <string name="settings_su_request_45">45 seconds</string>
    <string name="settings_su_request_60">60 seconds</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="auto_response">Automatic Response</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="superuser_notification">Superuser Notification</string>
    <string name="settings_su_reauth_title">Reauthenticate after upgrade</string>
    <string name="settings_su_reauth_summary">Ask for Superuser permissions again after upgrading apps</string>
    <string name="settings_su_tapjack_title">Tapjacking Protection</string>
    <string name="settings_su_tapjack_summary">The Superuser prompt dialog will not respond to input while obscured by any other window or overlay</string>
    <string name="settings_su_biometric_title">Biometric Authentication</string>
    <string name="settings_su_biometric_summary">Use biometric authentication to allow Superuser requests</string>
    <string name="no_biometric">Unsupported device or no biometric settings are enabled</string>
    <string name="settings_customization">Customization</string>
    <string name="setting_add_shortcut_summary">Add a pretty shortcut to the home screen in case the name and icon are difficult to recognize after hiding the app</string>
    <string name="settings_doh_title">DNS over HTTPS</string>
    <string name="settings_doh_description">Workaround DNS poisoning in some nations</string>
    <string name="multiuser_mode">Multiuser Mode</string>
    <string name="settings_owner_only">Device Owner Only</string>
    <string name="settings_owner_manage">Device Owner Managed</string>
    <string name="settings_user_independent">User-Independent</string>
    <string name="owner_only_summary">Only owner has root access</string>
    <string name="owner_manage_summary">Only owner can manage root access and receive request prompts</string>
    <string name="user_independent_summary">Each user has their own separate root rules</string>
    <string name="mount_namespace_mode">Mount Namespace Mode</string>
    <string name="settings_ns_global">Global Namespace</string>
    <string name="settings_ns_requester">Inherit Namespace</string>
    <string name="settings_ns_isolate">Isolated Namespace</string>
    <string name="global_summary">All root sessions use the global mount namespace</string>
    <string name="requester_summary">Root sessions will inherit their requester\'s namespace</string>
    <string name="isolate_summary">Each root session will have its own isolated namespace</string>
</resources>